agregando funcion de notificaciones

--- a/style.css
+++ b/style.css
@@ -199,6 +199,30 @@ header {
   transform: scale(1.1);
 }
 
+/* Estilos para las notificaciones */
+#notification-container {
+  position: fixed;
+  top: 50px;
+  right: 600px;
+  max-width: 300px;
+  z-index: 9999;
+}
+
+.notification {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  background-color: #f8d7da;
+  color: #721c24;
+  border-radius: 4px;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.notification.hide {
+  opacity: 0;
+}
+
+
 /*Footer*/
 
 footer {
