--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ header {
 .btn1,
 .btn2 {
   margin-top: 25px;
-  margin-left: 40px;
-  height: 45px;
+  margin-left: 50px;
+  height: 50px;
   width: 300px;
 }
 
@@ -119,7 +119,7 @@ header {
 /*Division de la segunda parte*/
 
 .mensajes {
-  width: 50%;
+  width: 40%;
   display: inline-block;
 }
 
@@ -139,10 +139,12 @@ header {
   border-radius: 15px;
   display: none;
   font-size: 20px;
-  overflow-y: auto;
   padding: 25px;
   text-align: justify;
   color: #0a3871;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  overflow-y: auto; 
 }
 
 /* Personaliza el scrollbar en navegadores basados en WebKit */
@@ -162,7 +164,7 @@ header {
 .imagen {
   display: flex;
   margin: 0 auto;
-  padding: 25px;
+  padding: 10px;
 }
 
 .mensaje-titulo {
@@ -181,10 +183,10 @@ header {
 .btn3 {
   position: absolute;
   top: 860px;
-  left: 995px;
+  left: 1035px;
   font-size: 20px;
   height: 50px;
-  width: 350px;
+  width: 300px;
   color: #072b61;
   background-color: #ffffff;
   border: 2px solid #072b61;
@@ -232,10 +234,22 @@ footer {
 }
 
 /*Responsive para tablet 1024px*/
+
+@media screen and (max-width: 1441px) {
+
+  .btn3{
+    width: 300px;
+    left: 975px;
+  }
+}
 @media screen and (max-width: 1025px) {
   .imagen {
     width: 200px;
     margin-left: 0px;
+  }
+  .btn3{
+    width: 200px;
+    left: 720px;
   }
 }
 
@@ -273,6 +287,8 @@ footer {
     margin-left: 35px;
   }
   .texto-mostrado {
+    height: auto;
+
     padding: 15px;
   }
   .btn3 {
